--- a/consulting-site/main.html
+++ b/consulting-site/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = en>
     <head> 
-        <meta charset = "utf8">
+        <meta charset = "utf-8">
         <title>Application Form</title>
         <script src="main.js"></script>
         <link href = "main.css" rel="stylesheet" type="text/css">
@@ -10,11 +10,11 @@
     <body>
         <br>
         <header class = "header">
-            <a><img src = "image/logo.svg" alt = "logo" class = "logo" width = "350" height = "100"><a></a>
+            <a><img src = "image/logo.svg" alt = "logo" class = "logo" width = "350" height = "100"></a>
             <input type = "checkbox" id = "check">
             <label for = "check" class = "icons">
-                <i class='bx bx-menu' id = menu-icon></i>
-                <i class='bx bx-x' id = close-icon></i>
+                <i class='bx bx-menu' id = "menu-icon"></i>
+                <i class='bx bx-x' id = "close-icon"></i>
             </label>
             <nav class = navbar>
                 <a href="#" style ="--i:0">About us</a>
@@ -29,77 +29,90 @@
         <form method="post" action="brain.php" class = "form">
             <fieldset>
                 <legend>Personal Informations</legend>
-                <input type =  "text" id = "name" name = "name" maxlength="100" placeholder="Your Name" size = "25" required>
-                <input type =  "text" id = "lname" name = "lname" maxlength="100" placeholder="Your Last Name" size="25" required>
                 <br>
-                <input type =  "tel" id = "phone" name = "phone" maxlength="100" placeholder="Your Phone Number" required>
+                <div class = "question">
+                    <i class='bx bxs-user'></i>
+                    <input type =  "text" id = "name" name = "name" maxlength="100" placeholder= "Name" size = "25" required>
+                </div>
+                <div class = "question">
+                    <i class='bx bxs-user'></i>
+                    <input type =  "text" id = "lname" name = "lname" maxlength="100" placeholder= "Last Name" size="25" required>
+                </div>
                 <br>
-                <input type =  "email" id = "email" name = "email" maxlength="100" placeholder="Your Email Adress" required>
+                <div class = "question">
+                    <i class='bx bxs-phone'></i>
+                    <input type =  "tel" id = "phone" name = "phone" maxlength="100" placeholder="Phone Number" required>
+                </div>
+                <div class = "question">
+                    <i class='bx bxl-gmail'></i>
+                    <input type =  "email" id = "email" name = "email" maxlength="100" placeholder="Email Adress" required>
+                </div>
                 <br>
             </fieldset>
             <fieldset>
                 <legend>Psychological Information</legend>
-                <q1>What kind of consulting service do you need?</q1>
+                <label class="q1">What kind of consulting service do you need?</label>
                 <br>
-                <input type =  "radio" id = "cservice" name = "cservice" value="online_therapy" checked>Online Therapy<br>
-                <input type =  "radio" id = "cservice" name = "cservice" value="child_adolescent_therapy">Child and Adolescent Therapy<br>
-                <input type =  "radio" id = "cservice" name = "cservice" value="individual_therapy">Individual Therapy<br>
-                <input type =  "radio" id = "cservice" name = "cservice" value="family_couple_therapy">Family and Couple Therapy<br>
+                <div class="radio-group">
+                    <input type =  "radio" id = "ot" name = "cservice" value="online_therapy" checked><label for="ot"> Online Therapy</label><br>
+                    <input type =  "radio" id = "cat" name = "cservice" value="child_adolescent_therapy"><label for="cat"> Child and Adolescent Therapy</label><br>
+                    <input type =  "radio" id = "it" name = "cservice" value="individual_therapy"><label for="it"> Individual Therapy</label><br>
+                    <input type =  "radio" id = "fct" name = "cservice" value="family_couple_therapy"><label for="fct"> Family and Couple Therapy</label><br>
+                </div>
                 <br>
-                <label for="multiligne">
-                    What would you like to get support for?
-                </label>
+                <label class="q1">What would you like to get support for?</label>
                 <br>
                 <textarea name = "multiligne" id = "multiligne" rows = "10" cols = "50" maxlength="300">Explain your reason in 300 letters</textarea>
                 <br>
-                <label for="gender">
-                    Please choose your gender :
-                </label>
-                <select name = "gender">
-                    <option value="man">Man</option>
-                    <option value="woman">Woman</option>
-                    <option value="other">Other</option>
-                </select>
-                <br>
-                <label for="preference">
-                    Please choose your sexual preference
-                </label>
-                <select name = "preference">
-                    <option value="hetero">Heterosexuel</option>
-                    <option value="homo">Homosexuel</option>
-                    <option value="other">Other</option>
-                </select>
-                <br>
-                <q1>What days of the week are you available ?</q1>
-                <br>
-                <select name="days" id = "days" multiple size="7" required>
-                    <option value = "monday"> Monday</option>
-                    <option value = "tuesday"> Tuesday</option>
-                    <option value = "wednesday"> Wednesday</option>
-                    <option value = "thursday"> Thursday</option>
-                    <option value = "friday"> Friday</option>
-                    <option value = "saturday"> Saturday</option>
-                    <option value = "sunday"> Sunday</option>
-                </select>
-                <br>
-                <q1>The most suitable time interval for you ?</q1>
-                <br>
-                <input type = "checkbox" name = "morning" id = "morning">
-                <label for = morning>Morning</label>
-                <br>
-                <input type = "checkbox" name = "afternoon" id = "afternoon">
-                <label for = afternoon>Afternoon</label>
-                <br>
-                <input type = "checkbox" name = "evening" id = "evening">
-                <label for = evening>Evening</label>
-                <br>
-                <q1>Your patient report or health report, if you have one ?</q1>
+                <div class = "group">
+                    <label class="q1">Please choose your gender :</label>
+                    <select name = "gender">
+                        <option value="man">Man</option>
+                        <option value="woman">Woman</option>
+                        <option value="other">Other</option>
+                    </select>
+                    <br>
+                    <br>
+                    <label class="q1">Please choose your sexual preference</label>
+                    <select name = "preference">
+                        <option value="hetero">Heterosexuel</option>
+                        <option value="homo">Homosexuel</option>
+                        <option value="other">Other</option>
+                    </select>
+                    <br>
+                    <br>
+                    <label class="q1">What days of the week are you available ?</label>
+                    <br>
+                    <select name="days" id = "days" multiple size="7" required>
+                        <option value = "monday"> Monday</option>
+                        <option value = "tuesday"> Tuesday</option>
+                        <option value = "wednesday"> Wednesday</option>
+                        <option value = "thursday"> Thursday</option>
+                        <option value = "friday"> Friday</option>
+                        <option value = "saturday"> Saturday</option>
+                        <option value = "sunday"> Sunday</option>
+                    </select>
+                    <br>
+                    <br>
+                    <label class="q1">The most suitable time interval for you ?</label>
+                    <br>
+                    <input type = "checkbox" name = "morning" id = "morning">
+                    <label for = morning>Morning</label>
+                    <br>
+                    <input type = "checkbox" name = "afternoon" id = "afternoon">
+                    <label for = afternoon>Afternoon</label>
+                    <br>
+                    <input type = "checkbox" name = "evening" id = "evening">
+                    <label for = evening>Evening</label>
+                    <br>
+                </div>
+                <label class="q1">Your patient report or health report, if you have one ?</label>
                 <br>
                 <input type = "file" name = "report"> 
                 <br>
+                <button type="submit" name="submit_button">Submit the Form</button>
+                <button type="reset" name="reset_button">Reset the Form</button>
             </fieldset>
-            <button type="submit" name="submit_button">Submit the Form</button>
-            <button type="reset" name="reset_button">Reset the Form</button>
         </form>
     </body>
 </html>
